# DXF-Scanner

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  autocad_compatible_test.dxf  build_native.bat  build_native.sh  minimal_autocad_test.dxf  pubspec.yaml  simple_dxf_test.dart  standalone_dxf_test.dart  test_dxf.dxf  test_dxf_validation.dart  test_geometric_dxf.dart  test_improved_dxf.dxf  test_improved_dxf_generation.dart  test_minimal_dxf.dart
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: image_data.dart
lib/providers/: app_state.dart
lib/screens/: home_screen.dart  splash_screen.dart
lib/services/: corner_detector.dart  corner_detector_ffi.dart  dxf_generator.dart  dxf_generator_minimal.dart  file_manager.dart  geometric_dxf_generator.dart  image_capture_service.dart  image_processor.dart  improved_dxf_generator.dart  measured_dxf_generator.dart  simple_dxf_generator.dart
lib/widgets/: architectural_corner_detection.dart  camera_widget.dart  corner_detection_overlay.dart  draggable_image_preview.dart  image_crop_widget.dart  image_preview.dart  progress_indicator.dart  simple_corner_detection.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  README.md  corner_detector.cpp  corner_detector.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
